Mon Feb 14 15:20:11 GMT 2005  Olly Betts <olly@survex.com>

	* extra/lemon.c: C, not C++.

Mon Feb 14 05:49:50 GMT 2005  Olly Betts <olly@survex.com>

	* extra/: Tweak lemon so we can avoid generating files in builddir
	  in a VPATH build.

Mon Feb 14 02:44:17 GMT 2005  Olly Betts <olly@survex.com>

	* extra/Makefile.am: Update to reflect lempar.c -> queryparser.lt.

Mon Feb 14 02:25:53 GMT 2005  Olly Betts <olly@survex.com>

	* extra/lempar.c,extra/queryparser.lt: Rename lemon template to .lt
	  which is more sensible than calling it lempar.c and should work
	  with VPATH builds.

Mon Feb 14 02:12:51 GMT 2005  Olly Betts <olly@survex.com>

	* extra/Makefile.am: Fixes for VPATH builds.

Mon Feb 14 01:43:59 GMT 2005  Olly Betts <olly@survex.com>

	* configure.ac: Need to AC_SUBST(CC_FOR_BUILD).

Mon Feb 14 00:19:45 GMT 2005  Olly Betts <olly@survex.com>

	* extra/Makefile.am: Added dependency for building queryparser.h.

Sun Feb 13 23:30:02 GMT 2005  Olly Betts <olly@survex.com>

	* extra/queryparser.cc,extra/queryparser_internal.h,
	  extra/xapian/queryparser.h: Fixed to compile with GCC 3.3.

Sun Feb 13 23:09:15 GMT 2005  Olly Betts <olly@survex.com>

	* configure.ac: Enhanced valgrind test to (a) see if --tool=memcheck
	  is needed and (b) see if valgrind actually works (we don't want to
	  try to use an x86 valgrind on an x86_64 box).

Mon Jan 17 03:21:29 GMT 2005  Olly Betts <olly@survex.com>

	* api/vectortermlist.h,extra/,extra/xapian/queryparser.h: Rewritten
	  QueryParser class.  Uses Lemon instead of Bison to generate the
	  parser, which enables us to stop using static data, so this class
	  is at last reentrant.  It now uses a PIMPL style with reference
	  counted internals like most of the other Xapian classes.  And
	  direct access to member variables has gone, which unfortunately
	  forces an API change (bug #39).  The rewrite also supports more
	  features than the original did.
	* HACKING,configure.ac: No longer need Bison.