@@ -1,3 +1,7 @@
+Mon Feb 14 15:34:13 GMT 2005  Olly Betts <olly@survex.com>
+
+	* extra/lemon.c: C90, not C99!
+
 Mon Feb 14 15:20:11 GMT 2005  Olly Betts <olly@survex.com>
 
 	* extra/lemon.c: C, not C++.
